<resources>
    <string name="app_name">Contact</string>
    <string name="contact_detail_button_replacer">텍스트</string>
    <string name="contact_detail_card_title_replacer">제목</string>
    <string name="contact_detail_card_description_replacer">설명</string>
    <string name="contact_detail_message_button">메시지</string>
    <string name="contact_detail_call_button">통화</string>
    <string name="contact_detail_phone_number_title">전화번호</string>
    <string name="contact_detail_website_title">웹사이트</string>
    <string name="contact_detail_memo_title">메모</string>
    <string name="mypage_name">Google</string>
    <string name="mypage_message">메시지</string>
    <string name="mypage_call">통화</string>
    <string name="mypage_mobile_title">전화번호</string>
    <string name="mypage_mobile_context">080-234-0051</string>
    <string name="mypage_homepage_title">홈페이지</string>
    <string name="mypage_homepage_context">https://www.google.co.kr/?hl=ko</string>
    <string name="mypage_memo_title">메모</string>
    <string name="mypage_memo_context">구글은 알파벳 산하의 종합 IT 기업으로, 역사상 전 세계 최대의 인터넷 기업중 하나이다.</string>
    <string name="taplayout_contact">연락처</string>
    <string name="taplayout_mypage">프로필</string>
    <string name="mypage_dialog_name">&#160;이름</string>
    <string name="mypage_dialog_phone">&#160;전화번호</string>
    <string name="mypage_dialog_homepage">&#160;웹사이트</string>
    <string name="mypage_dialog_memo">&#160;메모</string>
    <string name="mypage_toast_cancel">취소</string>
    <string name="contact_list_add">연락처에 추가되었습니다.</string>


</resources>