<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MyPageFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="365dp"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/cardviewImageView"
                    android:layout_width="365dp"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/defualt_profile" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/contectNameImageView"
                android:layout_width="365dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/darkgray_corner_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mypage_name"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/contectNameImageView"
                app:layout_constraintStart_toStartOf="@+id/contectNameImageView"
                app:layout_constraintTop_toTopOf="@+id/contectNameImageView" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrainlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@+id/contectNameImageView"
                app:layout_constraintStart_toStartOf="@+id/contectNameImageView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/messageButton"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/darkblue_corner_button"
                    android:text="@string/mypage_message"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/callButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/callButton"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/darkblue_corner_button"
                    android:text="@string/mypage_call"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/messageButton"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/mypagePhoneCardView"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                layout="@layout/mypage_phone_card"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@+id/contectNameImageView"
                app:layout_constraintStart_toStartOf="@+id/contectNameImageView"
                app:layout_constraintTop_toBottomOf="@+id/contectNameImageView" />

            <include
                android:id="@+id/mypagHomepageCardView"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                layout="@layout/mypage_homepage_card"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@+id/mypagePhoneCardView"
                app:layout_constraintStart_toStartOf="@+id/mypagePhoneCardView"
                app:layout_constraintTop_toBottomOf="@+id/mypagePhoneCardView" />

            <include
                android:id="@+id/mypageMemoCardView"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                layout="@layout/mypage_memo_card"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/mypagHomepageCardView"
                app:layout_constraintStart_toStartOf="@+id/mypagHomepageCardView"
                app:layout_constraintTop_toBottomOf="@+id/mypagHomepageCardView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/darkblue"
        android:clickable="true"
        android:src="@drawable/edit"
        android:tint="@color/white"
        app:fabCustomSize="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp" />


</androidx.constraintlayout.widget.ConstraintLayout>